refactor: change header code style

--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
     <div class="wrapper">
 
       <header>
-        <div class="content">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, sequi?
+        <div class="header__content">
+          <img src="assets/images/iit-logo.png" alt="iit-logo" class="logo">
+          <p><h1>IIT Department</h1></p>
         </div>
       </header>
 
