feat: finish pop up login

--- a/pages/news.html
+++ b/pages/news.html
@@ -57,7 +57,7 @@
 
           <ul class="nav">
             <li>
-              <a href="pages/news.html">
+              <a href="#">
                 <object type="image/svg+xml" data="assets/images/logos/ico-news.svg">
                 </object>
                 <p>News</p>
