--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <header>
         <div class="header__content">
           <!--<img src="assets/images/iit-logo.png" alt="iit-logo" class="logo">-->
-          <a href="index.html"><h1>IIT Department</h1></a>
+          <a href="../index.html"><h1>IIT Department</h1></a>
 
           <ul class="nav">
             <li>
@@ -65,7 +65,7 @@
             </li>
 
             <li>
-              <a href="#">
+              <a href="pages/library.html">
                 <object type="image/svg+xml" data="assets/images/logos/ico-library.svg">
                 </object>
                 <p>Library</p>
@@ -73,7 +73,7 @@
             </li>
             
             <li>
-              <a href="#">
+              <a href="pages/general-info.html">
                 <object type="image/svg+xml" data="assets/images/logos/ico-general-info.svg">
                 </object>
                 <p>General</p>
@@ -81,7 +81,7 @@
             </li>
 
             <li>
-              <a href="#">
+              <a href="pages/personal-info.html">
                 <object type="image/svg+xml" data="assets/images/logos/ico-personal-info.svg">
                 </object>
                 <p>Profile</p>
@@ -143,25 +143,25 @@
 
           <ul class="nav">
             <li>
-              <a href="#">
+              <a href="pages/news.html">
                 <p>News</p>
               </a>
             </li>
 
             <li>
-              <a href="#">
+              <a href="pages/library.html">
                 <p>Library</p>
               </a>
             </li>
             
             <li>
-              <a href="#">
+              <a href="pages/general-info.html.html">
                 <p>General</p>
               </a>
             </li>
 
             <li>
-              <a href="#">
+              <a href="pages/personal-info.html">
                 <p>Profile</p>
               </a>
             </li>
