feat: update library page

--- a/pages/general-info.html
+++ b/pages/general-info.html
@@ -110,7 +110,7 @@
       <main>
 
         <div class="main__content">
-          <h4>Библиотека</h4>
+          <h4>Новостной раздел</h4>
           <section class="publication-cards">
             
             <h4><br>Данный раздел находится в разработке</h4>
