feat: add profile page

--- a/pages/personal-info.html
+++ b/pages/personal-info.html
@@ -110,19 +110,30 @@
       <main>
 
         <div class="main__content">
-          <h4>Общая информация</h4>
+          <h4>Личная информация</h4>
           <section class="chooser">
             <div class="tabs">
               <button class="tab">
-                Информация о кафедре
+                Личный кабинет
               </button>
               <button class="tab">
-                Информация для абитуриентов
+                Расписание
               </button>
               <button class="tab">
-                Технология OSTIS
+                Успеваемость
               </button>
-              
+              <button class="tab">
+                Объявления
+              </button>
+              <button class="tab">
+                Персональная документация(пр.)
+              </button>
+              <button class="tab">
+                База данных студентов(пр.)
+              </button>
+              <button class="tab">
+                Личное расписание(пр.)
+              </button>
             </div>
             <div class="information-frame">
 
