fix: fix index bag

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <header>
         <div class="header__content">
           <!--<img src="assets/images/iit-logo.png" alt="iit-logo" class="logo">-->
-          <a href="../index.html"><h1>IIT Department</h1></a>
+          <a href="index.html"><h1>IIT Department</h1></a>
 
           <ul class="nav">
             <li>
