--- a/pages/personal-info.html
+++ b/pages/personal-info.html
@@ -101,7 +101,7 @@
             <form action="javascript:PopUpShow()">
               <button type="submit">Login</button>
             </form>
-            <form action="">
+            <form action="javascript:PopUpShow()">
               <button type="submit">Sign-up</button>
             </form>
           </div>
