--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
               <p>Кирилушкин Александр, <br>
                 Клинцов Антон,<br>
                 Шевцов Даниил,<br>
-                Тавлуй екатерина,<br>
+                Тавлуй Екатерина,<br>
                 Гончаров Даниил,<br>
-                Ладейко антон,<br>
+                Ладейко Антон,<br>
                 Жариков Андрей<br>
               </p>
             </div>
